--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 
 jdbc.driverClassName=org.postgresql.Driver
 jdbc.url=jdbc:postgresql://127.0.0.1:5432/contactdb
-jdbc.username=kate
-jdbc.password=asforme1
+jdbc.username=
+jdbc.password=
 
 ################### Hibernate Configuration ##########################
 hibernate.dialect=org.hibernate.dialect.H2Dialect
